# traffic-analyzer

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
data/configs/: config.ini  config_analytics.ini  config_pgie_detector.ini  config_preprocess.ini  config_sgie_awl.ini  config_sgie_lpd_us.ini  config_sgie_lpr_us.ini  config_sgie_vehiclemake.ini  config_sgie_vehicletypes.ini  config_sgie_vlad.ini  config_tracker_IOU.yml  config_tracker_NvDCF_accuracy.yml  config_tracker_NvDCF_max_perf.yml  config_tracker_NvDCF_perf.yml  config_tracker_NvDeepSORT.yml  config_tracker_NvSORT.yml
data/labels/: labels.txt  labels_vehicletype.txt
include/: analytics.hpp  app.hpp  c2d_msg.hpp  c2d_msg_util.hpp  common.hpp  config.hpp  config_parser.hpp  gie.hpp  image_save.hpp  osd.hpp  perf.hpp  preprocess.hpp  primary_gie.hpp  secondary_gie.hpp  secondary_preprocess.hpp  sinks.hpp  sources.hpp  streammux.hpp  tiled_display.hpp  tracker.hpp
include/yolo/: calibrator.hpp  plugins.hpp  utils.hpp  yolo.hpp
include/yolo/layers/: activation.hpp  batchnorm.hpp  channels.hpp  convolutional.hpp  deconvolutional.hpp  implicit.hpp  pooling.hpp  reorg.hpp  route.hpp  sam.hpp  shortcut.hpp  slice.hpp  upsample.hpp
src/: analytics.cpp  app.cpp  c2d_msg.cpp  c2d_mst_util.cpp  common.cpp  config_parser.cpp  image_save.cpp  osd.cpp  perf.cpp  preprocess.cpp  primary_gie.cpp  secondary_gie.cpp  secondary_preprocess.cpp  sinks.cpp  sources.cpp  streammux.cpp  tiled_display.cpp  tracker.cpp
src/lpr/: nvinfer_custom_lpr_parser.cpp
src/yolo/: calibrator.cpp  engine.cpp  forward.cu  forward_nc.cu  forward_v2.cu  input_layers.cpp  parsebbox.cpp  parsebbox_cuda.cu  plugins.cpp  utils.cpp  yolo.cpp
src/yolo/layers/: activation.cpp  batchnorm.cpp  channels.cpp  convolutional.cpp  deconvolutional.cpp  implicit.cpp  pooling.cpp  reorg.cpp  route.cpp  sam.cpp  shortcut.cpp  slice.cpp  upsample.cpp
